--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 <body class="a">
 		<h1 class="a">
-			<a href="susanne.html" target="blank">Susanne</a>
+			<a href="Susanne.html" target="blank">Susanne</a>
 		</h1>
 		<h1 class="b">
-			<a href="stine.html" target="blank">Stine</a>
+			<a href="Stine.html" target="blank">Stine</a>
 		</h1>
 </body>
 </html>
