--- a/Susanne.html
+++ b/Susanne.html
@@ -6,6 +6,7 @@
    <meta charset="UTF-8">
 </head>
 <body>
+   <h1> Litt om meg </h1>
     <p> Hei, jeg heter Susanne Marie M Kvame og er 18 år. Jeg går realfagsretningen på Strand og har valgt dette faget for å se om dette er noe jeg kan jobbe med i framtiden. Jeg er interessert i musikk og teater, men teknologi er også noe som fascinerer og interesserer meg. </p>
 </body>
 </html>
