--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<style>
 		body.a{
-			background-color: #FF00FF;
+			background-color: #CC7063;
 		}
 		h1.a{
 			margin-top: 20%;
