--- a/Stine.html
+++ b/Stine.html
@@ -6,6 +6,6 @@
 <title> Hei! </title>
 </head>
 <body>
-    <p> Hei jeg heter Stine og går på strand vgs, jeg valgte informasjonsteknologi fordi det virket som eit spennende fag. </p>
+    <p> Hei jeg heter Stine og går siste året på strand vgs. Jeg valgte informasjonsteknologi fordi det virket som eit spennende fag. </p>
 </body>
 </html>
