--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 		<h1 class="b">
 			<a href="Stine.html" target="blank">Stine</a>
 		</h1>
+	        <h1 class="c">
+			<a href="Servicedesk.html" target="blank">Servicedesk</a>
 </body>
 </html>
