--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Susanne Marie </title>
+	<title>Susanne of Stine </title>
 	<meta charset="utf-8">
 	<style>
 		body.a{
