--- a/index.html
+++ b/index.html
@@ -6,26 +6,18 @@
 	<style>
 		body.a{
 			background-color: #5499C7;
-		}
-		h1.a{
-			margin-top: 20%;
-			text-align: center;
-		}
-		h1.b{
-			margin-top: 100px;
-			text-align: center;
-		}
+		
 	</style>
 </head>
 <body class="a">
 		<h1 class="a">
-			<a href="Susanne.html" target="blank">Susanne</a>
+			<a href="Susanne.html">Susanne</a>
 		</h1>
 		<h1 class="b">
-			<a href="Stine.html" target="blank">Stine</a>
+			<a href="Stine.html">Stine</a>
 		</h1>
 	        <h1 class="c">
-			<a href="Servicedesk.html" target="blank">Servicedesk</a>
+			<a href="Servicedesk.html">Servicedesk</a>
 	        </h1>
 </body>
 </html>
