--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -10,12 +10,13 @@
   <body>
     <p> For å lage ei nettside er det vanlig og bruke HTML-koding.<br> Det er mange ulike programmer det er mulig og kode med HTML på, men vi velger og bruke github.</p>
   </body>
-  <h5>Her er punktvis hvilke koder du må bruke for å lage ei nettside:</h5>
+  <h3>Her er punktvis hvilke koder du må bruke for å lage ei nettside:</h3>
   <body>
    <ol> 
      <li> Alle kommandoene skal skrives i klammer. Eks: <kommando>. Hvis du skal angi at det er slutten på bruken av koden bruker du </kommando>. </li>
       <li> Start med å angi type dokument, i dette tilfelle html.<br> Dette gjør du ved å skrive !DOCTYPE html i starten, og deretter bare <html> for å angi starten på dokumentet.<br> Ikke glem klammer</li>
         <li> Deretter må du angi skrifttype. Vi bruker tegnsettet UTF-8, fordi dette tegnsettet har æ,ø og å.<br> Vi bruker kommandoen meta charset-"UTF-8", i klammer. Denne koden trenger vi ikke avslutte i slutten av dokumentet.
+     <li> På neste linje bruker du kommandoen <title> Navn på dokument </title>  til å gi nettsida et navn.
     </ol>
       
       
