--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -16,7 +16,12 @@
      <li> Alle kommandoene skal skrives i klammer. Eks: <kommando>. Hvis du skal angi at det er slutten på bruken av koden bruker du </kommando>. </li>
       <li> Start med å angi type dokument, i dette tilfelle html.<br> Dette gjør du ved å skrive !DOCTYPE html i starten, og deretter bare <html> for å angi starten på dokumentet.<br> Ikke glem klammer</li>
         <li> Deretter må du angi skrifttype. Vi bruker tegnsettet UTF-8, fordi dette tegnsettet har æ,ø og å.<br> Vi bruker kommandoen meta charset-"UTF-8", i klammer. Denne koden trenger vi ikke avslutte i slutten av dokumentet.
-     <li> På neste linje bruker du kommandoen <title> Navn på dokument </title>  til å gi nettsida et navn.
+     <li> På neste linje bruker du kommandoen title Navn på dokument /title til å gi nettsida et navn. Ikke glem klammer rundt title.
+       <li> Nå kan du begynne på teksten du vil ha på nettsiden. Overskriften skriver du inne i klammer med h1, h2,..h6 etter hvilken størrelse du vil ha på overskrifta.<br> Deretter skriv overskriften og avslutt med /h1,/h2...,h6.</li>
+     <li> Nå kan du begynne på den vanlige teksten. Dette bruker du kommandoen body i klammer til, og skriver deretter teksten du skal ha inn. <br> Det er lurt å bruke kommandoen p og så skrive teksten du skal ha, og avslutt med /p for at teksten skal få litt luft fra teksten over.</li>
+     <li>Dersom du ønsker ei liste på nettsiden din kan du bruke, kommandoen ul i klammer for punkt, eller ol for tall. <br> For hver linje i listen må du bruke kommandoen li, og avslutte etter teksen du skal ha på linja med /li> <br>  Husk klammer, og avslutt med kommandoen /ul eller /ol.</li>
+     <li> For å skape luft i lange lister kan du bruke kommandoen br mellom setningene. Denne kommandoen trenge du ikke avslutte, men husk klammer. </li>
+     <li> For å sende noen videre til ei annen nettside kan du linke til den med kommandoen </li>
     </ol>
-      
+  </body>
       
