--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -19,8 +19,13 @@
      <li> På neste linje bruker du kommandoen title Navn på dokument /title til å gi nettsida et navn. Ikke glem klammer rundt title.
        <li> Nå kan du begynne på teksten du vil ha på nettsiden. Overskriften skriver du inne i klammer med h1, h2,..h6 etter hvilken størrelse du vil ha på overskrifta.<br> Deretter skriv overskriften og avslutt med /h1,/h2...,h6.</li>
      <li> Nå kan du begynne på den vanlige teksten. Dette bruker du kommandoen body i klammer til, og skriver deretter teksten du skal ha inn. <br> Det er lurt å bruke kommandoen p og så skrive teksten du skal ha, og avslutt med /p for at teksten skal få litt luft fra teksten over.</li>
-     <li>Dersom du ønsker ei liste på nettsiden din kan du bruke, kommandoen ul i klammer for punkt, eller ol for tall. <br> For hver linje i listen må du bruke kommandoen li, og avslutte etter teksen du skal ha på linja med /li> <br>  Husk klammer, og avslutt med kommandoen /ul eller /ol.</li>
+    </ol>
+  </body>
+  <h3> Her er noen tilleggskoder som kan være greie å ha med</h3>
+  <body>
+    <ol>
+      li>Dersom du ønsker ei liste på nettsiden din kan du bruke, kommandoen ul i klammer for punkt, eller ol for tall. <br> For hver linje i listen må du bruke kommandoen li, og avslutte etter teksen du skal ha på linja med /li> <br>  Husk klammer, og avslutt med kommandoen /ul eller /ol.</li>
      <li> For å skape luft i lange lister kan du bruke kommandoen br mellom setningene. Denne kommandoen trenge du ikke avslutte, men husk klammer. </li>
      <li> For å sende noen videre til ei annen nettside kan du linke til den med kommandoen  a href="dokument.html" Navn på dokument /a. <br> I denne kommandoen må du bruke klammer rundt første del før navnet på dokumentet, og avslutte med /a med klammer </li>
     </ol>
-  </body>
+</html>
