--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -28,4 +28,5 @@
      <li> For å skape luft i lange lister kan du bruke kommandoen br mellom setningene. Denne kommandoen trenge du ikke avslutte, men husk klammer. </li>
      <li> For å sende noen videre til ei annen nettside kan du linke til den med kommandoen  a href="dokument.html" Navn på dokument /a. <br> I denne kommandoen må du bruke klammer rundt første del før navnet på dokumentet, og avslutte med /a med klammer </li>
     </ol>
+    <a href="https://imgur.com/pl2y0W2"><img src="https://i.imgur.com/pl2y0W2.png" title="source: imgur.com" /></a>
 </html>
