--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -12,6 +12,9 @@
     <img src="img/logginn.png" alt="logg inn" width="424" height="511">
        
     </p>
-    
+    <p>
+   <h2> Lag en resporitie</h2>
+   <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
+   </p>
 </body>
 </html>
