--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -8,13 +8,14 @@
 <body>
     <p> 
     <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
+   </body>
     <img src="img/logginn.png" alt="logg inn" width="424" height="511">   
    </p>
     <p>
    <h2> Lag en repository</h2>
-  <p> Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository</p>
+ <body> <p> Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository</p>
    <Når du kommer inn på repositoryen gir du den eit navn under der det står "resporitory navn". <br> Du velger om du vil legge inn en forklaring på hva du skal bruke den til på "description".<br>
-   Du må beholde resporitoryen public.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll. <br> 
+   Du må beholde resporitoryen public.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll. <br> </body>
       <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
    
 </body>
