--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -20,5 +20,9 @@
     </p> 
 </body>
       <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
-   
+<body> 
+   <p> Deretter velger du selv om du vil endre navn på "default branch". <br> Så må du fikse en del for å få det på rett branch slik at nettsiden kan funke. Da stater du med og trykke på options og bla nedover til du finnerder det står github pages.<br> 
+      Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den.<br> 
+      Filen som du vil at koden skal ta utgangspunkt i på du kalle index.html.<br>
+   </p>
 </html>
