--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -16,7 +16,7 @@
     <p> 
        Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository
    <br>Når du kommer inn på repositoryen gir du den eit navn under der det står "resporitory navn". <br> Du velger om du vil legge inn en forklaring på hva du skal bruke den til på "description".<br>
-   Du må beholde resporitoryen public.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll.
+   Du må beholde resporitoryen public hvis du vil at andre skal se hva du har laget.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll.
     </p> 
 </body>
       <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
