--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -23,6 +23,6 @@
 <body> 
    <p> Deretter velger du selv om du vil endre navn på "default branch". <br> Så må du fikse en del for å få det på rett branch slik at nettsiden kan funke. Da starter du med og trykke på options og bla nedover til du finner stedet hvor det står github pages.<br> 
       Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den.<br> 
-      Filen som du vil at koden skal ta utgangspunkt i på du kalle index.html.<br>
+      Filen som du vil at koden skal ta utgangspunkt i må du kalle index.html.<br>
    </p>
 </html>
