--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
+<!--Vi bruker !DOCTYPE html for å vise at det er ei html-nettside.-->
 <html>
+   <!--Head bruker du til overskrifter, h1, h2, h3... avgjør hvilken størrelse overskriften blir-->
 <head>
    <title> Hei! </title>
-   <!--UTF-8 gjør at vi kan bruke æ, ø, å -->
+   <!--Meta charset viser at det er eit tegnsett vi kan bruke, og UTF-8 gjør at vi kan bruke æ, ø, å -->
    <meta charset="UTF-8">
 </head>
+   <!--Body viser at det er starten på den vanlige teksten-->
 <body>
     <p> 
+       <!--Teksten mellom <p> og </p> er eit avsnitt-->
     <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
    </body>
     <img src="img/logginn.png" alt="logg inn" width="424" height="511">   
    </p>
    <h2> Lag en repository</h2>
  <body>
+    <!--<br> brukes for å lage luft i teksten, teksten etter <br> begynner på ein ny linje-->
     <p> 
        Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository
    <br>Når du kommer inn på repositoryen gir du den eit navn under der det står "resporitory navn". <br> Du velger om du vil legge inn en forklaring på hva du skal bruke den til på "description".<br>
