--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -24,6 +24,7 @@
    Du må beholde resporitoryen public hvis du vil at andre skal se hva du har laget.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll.
     </p> 
 </body>
+<!--<img src="img/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
       <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
 <body> 
    <p> Deretter velger du selv om du vil endre navn på "default branch". <br> Så må du fikse en del for å få det på rett branch slik at nettsiden kan funke. Da starter du med og trykke på options og bla nedover til du finner stedet hvor det står github pages.<br> 
