--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -27,7 +27,8 @@
 <!--<img src="img/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
       <img src="img/innstillinger.png" alt="innstillinger" width="783" height="814">
 <body> 
-   <p> Deretter velger du selv om du vil endre navn på "default branch". <br> Så må du fikse en del for å få det på rett branch slik at nettsiden kan funke. Da starter du med og trykke på options og bla nedover til du finner stedet hvor det står github pages.<br> 
+   <p> Deretter velger du selv om du vil endre navn på "default branch". <br> Så må du fikse en del for å få det på rett branch slik at nettsiden kan funke.<br>
+      Da starter du med og trykke på options og bla nedover til du finner stedet hvor det står github pages.<br> 
       Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den.<br> 
       Filen som du vil at koden skal ta utgangspunkt i må du kalle index.html.<br>
    </p>
