--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -13,7 +13,7 @@
        <!--Teksten mellom <p> og </p> er eit avsnitt-->
     <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
    </body>
-     <img src="img/logginn.png" alt=logginn" class="inline" >  
+     <img src="img/logginn.png" alt=logginn" class="inline"/>  
    </p>
    <h2> Lag en repository</h2>
  <body>
