--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <!--Vi bruker !DOCTYPE html for å vise at det er ei html-nettside.-->
 <html>
    <!--Head bruker du til overskrifter, h1, h2, h3... avgjør hvilken størrelse overskriften blir-->
@@ -13,7 +14,7 @@
        <!--Teksten mellom <p> og </p> er eit avsnitt-->
     <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
    </body>
-     <img src="img/logginn.png" alt=logginn" class="inline"/>  
+    <img src="img/logginn.png" alt="logginn.png" width="424" height="511">   
    </p>
    <h2> Lag en repository</h2>
  <body>
