--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -14,7 +14,7 @@
        <!--Teksten mellom <p> og </p> er eit avsnitt-->
     <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
    </body>
-    <img src="img/logginn.png" alt="logginn.png" width="424" height="511"/>   
+    <img src="img/https://github.com/Stine-og-Susanne/Gruppe-3/blob/master/logginn.png" alt="logginn.png" width="424" height="511"/>   
    </p>
    <h2> Lag en repository</h2>
  <body>
