--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -12,7 +12,9 @@
 <body>
     <p> 
        <!--Teksten mellom <p> og </p> er eit avsnitt-->
-    <h2>Start med å logge inn, eller lage en ny bruker inne på github.</h2>
+       <h2> Hvordan lage nettside og bruker på Github </h2>
+   
+    <h3>Start med å logge inn, eller lage en ny bruker inne på github.</h3>
    </body>
     <img src="img/logginn.png" alt="logginn.png" width="424" height="511"/>   
    </p>
