--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -4,7 +4,7 @@
 <html>
    <!--Head bruker du til overskrifter, h1, h2, h3... avgjør hvilken størrelse overskriften blir-->
 <head>
-   <title> Hei! </title>
+   <title> Servicedesk </title>
    <!--Meta charset viser at det er eit tegnsett vi kan bruke, og UTF-8 gjør at vi kan bruke æ, ø, å -->
    <meta charset="UTF-8">
 </head>
