--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -11,7 +11,7 @@
    <!--Body viser at det er starten på den vanlige teksten-->
 <body>
     <p> 
-       <!--Teksten mellom <p> og </p> er eit avsnitt-->
+   <!--Teksten mellom <p> og </p> er eit avsnitt-->
        <h2> Hvordan lage nettside og bruker på Github </h2>
    
     <h3>Start med å logge inn, eller lage en ny bruker inne på github.</h3>
@@ -23,8 +23,8 @@
     <!--<br> brukes for å lage luft i teksten, teksten etter <br> begynner på ein ny linje-->
     <p> 
        Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository
-   <br>Når du kommer inn på repositoryen gir du den eit navn under der det står "resporitory navn". <br> Du velger om du vil legge inn en forklaring på hva du skal bruke den til på "description".<br>
-   Du må beholde resporitoryen public hvis du vil at andre skal se hva du har laget.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll.
+   <br>Når du kommer inn på repositoryen gir du den eit navn under der det står "resporitory navn". <br> Du velger om du vil legge inn en forklaring på hva du skal bruke den til på "description".
+   <br> Du må beholde resporitoryen public hvis du vil at andre skal se hva du har laget.<br> Kryss deretter av alle dei tre boksene, og endre gitignore templaten til jekyll.
     </p> 
 
 <!--<img src="img/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
