--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -16,7 +16,7 @@
    
     <h3>Start med å logge inn, eller lage en ny bruker inne på github.</h3>
    
-    <img src="img/logginn.png" alt="logginn.png" width="424" height="511"/>   
+    <img src="logginn.png" alt="logg inn" width="424" height="511"/>   
    </p>
    <h2> Lag en repository</h2>
 
