--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -13,8 +13,8 @@
     <p> 
    <!--Teksten mellom <p> og </p> er eit avsnitt-->
        <h2> Hvordan lage nettside og bruker på Github </h2>
-   
-    <h3>Start med å logge inn, eller lage en ny bruker inne på github.</h3>
+   <ol>
+      <li> <h3>Gå inn på www.github.com og start med lage en ny bruker</h3> </li>
    
     <img src="Bilder/logginn.png" alt="logg inn" width="424" height="511"/>   
    </p>
