--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -14,7 +14,7 @@
   
       <h2> Hvordan lage nettside og bruker på Github </h2>
       <ol>
-      <li> <h3>Gå inn på www.github.com og start med lage en ny bruker</h3> </li>
+      <h3> <li> Gå inn på www.github.com og start med lage en ny bruker </li> </h3>
    
       <img src="Bilder/logginn.png" alt="logg inn" width="424" height="511"/>   
    
