--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -18,7 +18,7 @@
    
       <img src="Bilder/logginn.png" alt="logg inn" width="424" height="511"/>   
    
-      <h3>  Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository</h3>
+      <h3> <li> Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository </li> </h3>
          
        <img src="Bilder/repository.png" alt="Lage repository" width="260"/>
 
