--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -51,7 +51,7 @@
     </ul> 
     <img src="Bilder/newfile.png" alt="new file" width="1000"/>
         
-    <h3> Finne linken til nettsiden</h3>
+    <h3> <li> Finne linken til nettsiden </li> </h3>
     
     <ul>
     <h4> <li> Først starter du med å trykke på options og bla nedover til du finner stedet hvor det står github pages.</li>
