--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -57,6 +57,7 @@
     <h4> <li> Først starter du med å trykke på options og bla nedover til du finner stedet hvor det står github pages.</li>
     <li> Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den </li>
     </ul>
+        <img src="Bilder/innstillinger.png" alt="innstillinger" width="1000"
     </body> 
    
     </html>
