--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -58,6 +58,8 @@
     <li> Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den </li>
     </ul>
         <img src="Bilder/innstillinger.png" alt="innstillinger" width="900"
+             
+    <h2> Og slik er det man lager en nettside! </h2>
     </body> 
    
     </html>
