--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -14,7 +14,9 @@
         
     <h1> Hvordan lage nettside og bruker på Github </h1>
     <ol>
-    <h2> <li> Gå inn på www.github.com og start med lage en ny bruker </li> </h2>
+    <h2> <li> Gå inn på 
+        <a href="https://www.github.com" target="_blank"> www.github.com </a>
+           og start med lage en ny bruker </li> </h2>
 <!--<img src="img/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
     <img src="Bilder/logginn.png" alt="logg inn" width="424" height="511"/>   
    
