--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -57,7 +57,8 @@
     
     <ul>
     <h3> <li> Først starter du med å trykke på options og bla nedover til du finner stedet hvor det står github pages.</li>
-    <li> Her endrer du branchen til den branchen du skal bruke og det vil nå være mulig og publisere ei nettside når du er ferdig og kode den </li> </h3>
+    <li> Her endrer du branchen til den branchen du skal bruke </li>
+    <li> Til slutt trykker du på "save" og URLen til nettsiden vil dukke opp  </h3>      
     </ul>
         <img src="Bilder/innstillinger.png" alt="innstillinger" width="900" <br>
              
