--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -17,9 +17,10 @@
     <h2> <li> Gå inn på 
         <a href="https://www.github.com" target="_blank"> www.github.com </a>
            og start med lage en ny bruker </li> </h2>
-<!--<img src="img/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
+<!--<img src="Bilder/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
     <img src="Bilder/logginn.png" alt="logg inn" width="424" height="511"/>   
-   
+   <!-- kommandoen <ul> gjør at det blir en liste med punkt og avsluttes med </ul>. Kommandoen <ol> gir liste med tall og avsluttes med </ol.>
+For hvert nye punkt/tall på lista bruker du kommandoen <li> og avslutter med </li>-->
     <h2> <li> Når du har kommet inn på github må du trykke på plusstegnet oppe i høyre hjørnet og klikker på new repository </li> </h2>
          
     <img src="Bilder/repository.png" alt="Lage repository" width="1000"/>
