--- a/Servicedesk.html
+++ b/Servicedesk.html
@@ -15,6 +15,7 @@
     <h1> Hvordan lage nettside og bruker på Github </h1>
     <ol>
     <h2> <li> Gå inn på 
+<!-- Ved bruk av href kan vi linke til til andre nettsider -->  
         <a href="https://www.github.com" target="_blank"> www.github.com </a>
            og start med lage en ny bruker </li> </h2>
 <!--<img src="Bilder/navnpåbilde.png" alt="navnpåbilde" width="bredde" height="høyde"> bruker du for å legge inn eit bilde-->
