--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</style>
 </head>
 <body class="a">
-		<h1 class="a">
+		<h1 class"button red">
 			<a href="Susanne.html">Susanne</a>
 		</h1>
-		<h1 class="b">
+		<h1 class"button red">
 			<a href="Stine.html">Stine</a>
 		</h1>
-	        <h1 class="c">
+	        <h1 class="button red">
 			<a href="Servicedesk.html">Servicedesk</a>
 	        </h1>
 </body>
