--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
 	<meta charset="utf-8">
 	<style>
 		body.a{
-			background-color: #5499C7;
+			background-color: #666777;
 		
 	</style>
 </head>
 <body class="a">
-		<h1 class"button red">
-			<a href="Susanne.html">Susanne</a>
+		<h1 class"button red" href="Susanne.html">Susanne</a>
 		</h1>
-		<h1 class"button red">
-			<a href="Stine.html">Stine</a>
+		<h1 class"button red" href="Stine.html">Stine</a>
 		</h1>
-	        <h1 class="button red">
-			<a href="Servicedesk.html">Servicedesk</a>
+	        <h1 class="button red" href="Servicedesk.html">Servicedesk</a>
 	        </h1>
 </body>
 </html>
