--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		
 	</style>
 </head>
-<body class="a">
-		<h1 class"button red" href="Susanne.html">Susanne</a>
-		</h1>
-		<h1 class"button red" href="Stine.html">Stine</a>
-		</h1>
-	        <h1 class="button red" href="Servicedesk.html">Servicedesk</a>
-	        </h1>
+<div class="knapper">
+	<a class="aktiv" href="Susanne.html"><button class="btn btnSusanne">Susanne<button></a>
+	
+	<a class="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a>
+	
+       <a class="aktiv" href="Servicedesk.html"><button class="btn btnServicedesk">Servicedesk<button></a>
+	       <h1> Velkommen til Stine og Susanne sin github side</h1>   
 </body>
 </html>
