--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 	</style>
 </head>
 <div class="knapper">
-	<a class="aktiv" href="Susanne.html"><button class="btn btnSusanne">Susanne<button></a>
+	<a class="aktiv" href="Index.html"><button class="btn btnHovedside">Hovedside<button></a>
 	
-	<a class="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a>
+	<a href="aktiv" href="Susanne.html"><button class="btn btnSusannee">Susanne<button></a>
+	<a href="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a>
 	
-       <a class="aktiv" href="Servicedesk.html"><button class="btn btnServicedesk">Servicedesk<button></a>
+       <a href="aktiv" href="Servicedesk.html"><button class="btn btnServicedesk">Servicedesk<button></a>
 	       <h1> Velkommen til Stine og Susanne sin github side</h1>   
 </body>
 </html>
