--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 	<a class="aktiv" href="Index.html"><button class="btn btnHovedside">Hovedside<button></a>
 	
 	<a href="aktiv" href="Susanne.html"><button class="btn btnSusannee">Susanne<button></a>
-	<a href="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a>
+		<a href="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a> </div>
 	
        <a href="aktiv" href="Servicedesk.html"><button class="btn btnServicedesk">Servicedesk<button></a>
-	       <h1> Velkommen til Stine og Susanne sin github side</h1>   
+	   <div class="hovedside"
+		<h1 class=1hovedside>
+	       Velkommen til Stine og Susanne sin nettside</h1>   
+	       </div>
 </body>
 </html>
