--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		
 	</style>
 </head>
+	<body>
 <div class="knapper">
 	<a class="aktiv" href="Index.html"><button class="btn btnHovedside">Hovedside<button></a>
 	
@@ -20,5 +21,6 @@
 		<h1 class=1hovedside>
 	       Velkommen til Stine og Susanne sin nettside</h1>   
 	       </div>
+			</body>
 </body>
 </html>
