--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
 	<title>Susanne og Stine </title>
 	<meta charset="utf-8">
 	<style>
-		<body=bgcolor=" #666777">
+		body{background-color: #666777";}
 		
 	</style>
 </head>
-	<body>
-<div class="knapper">
-	<a class="aktiv" href="Index.html"><button class="btn btnHovedside">Hovedside<button></a>
 	
-	<a href="aktiv" href="Susanne.html"><button class="btn btnSusannee">Susanne<button></a>
-		<a href="aktiv" href="Stine.html"><button class="btn btnStine">Stine<button></a> </div>
-	
-       <a href="aktiv" href="Servicedesk.html"><button class="btn btnServicedesk">Servicedesk<button></a>
-	   <div class="hovedside"
-		<h1 class=1hovedside>
-	       Velkommen til Stine og Susanne sin nettside</h1>   
-	       </div>
-		
+	<a href="Susanne.html">Susanne</a>
+	<a href="Stine.html">Stine</a>
+	<a href="Servicedesk.html">Servicedesk</a>
 </body>
 </html>
