--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Susanne og Stine </title>
 	<meta charset="utf-8">
 	<style>
-		body{background-color: #666777";}
+		<body{background-color: #666777";}>
 		
 	</style>
 </head>
