--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Susanne og Stine </title>
 	<meta charset="utf-8">
 	<style>
-		<body{background-color: #666777";}>
+		body{background-color: #666777";}
 		
 	</style>
 </head>
-	
+	<body>
 	<a href="Susanne.html">Susanne</a>
 	<a href="Stine.html">Stine</a>
 	<a href="Servicedesk.html">Servicedesk</a>
