--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	</style>
 </head>
 	<body>
-	<a href="Susanne.html">Susanne</a>
-	<a href="Stine.html">Stine</a>
-	<a href="Servicedesk.html">Servicedesk</a>
+		<ul>
+			<li><a href="Susanne.html">Susanne</a></li>
+			<li><a href="Stine.html">Stine</a></li>
+			<li><a href="Servicedesk.html">Servicedesk</a></li>
+		</ul>
 </body>
 </html>
